# cgal-public-dev

./: .gitignore
AABB_tree/demo/AABB_tree/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h
Alpha_shapes_2/include/CGAL/: Alpha_shape_2.h
Arrangement_on_surface_2/demo/Arrangement_on_surface_2/: ArrangementTypes.h
Arrangement_on_surface_2/demo/Arrangement_on_surface_2/old_demo/: cgal_types.h
Arrangement_on_surface_2/examples/Arrangement_on_surface_2/: face_extension.cpp  observer.cpp
Arrangement_on_surface_2/include/CGAL/: Arr_face_index_map.h  Arr_observer.h  Arr_trapezoid_ric_point_location.h  Arr_triangulation_point_location.h  Arr_vertex_index_map.h  Arrangement_2.h  Arrangement_on_surface_2.h  Arrangement_on_surface_with_history_2.h  Arrangement_with_history_2.h
Arrangement_on_surface_2/include/CGAL/Arr_point_location/: Arr_lm_generator_base.h  Arr_lm_vertices_generator.h  (+3 more)
Arrangement_on_surface_2/test/Arrangement_on_surface_2/: test_observer.cpp
Bounding_volumes/include/CGAL/: Min_annulus_d.h
CGAL_ImageIO/src/CGAL_ImageIO/: Image_3.cpp
Documentation/doc/Documentation/: dependencies  packages.txt
Documentation/doc/biblio/: cgal_manual.bib
Generalized_region_growing/benchmark/Generalized_region_growing/: CMakeLists.txt  README.md  benchmark_region_growing_with_points_2.cpp
Generalized_region_growing/doc/Generalized_region_growing/: Doxyfile.in  Generalized_region_growing.txt  PackageDescription.txt  dependencies  examples.txt
Generalized_region_growing/examples/Generalized_region_growing/: CMakeLists.txt  Region_growing_with_mesh.cpp  Region_growing_with_mesh_big_test.cpp  Region_growing_with_mesh_cube.cpp  Region_growing_with_points.cpp  Region_growing_with_points_2.cpp  Region_growing_with_points_3.cpp  Simple_example.cpp
Generalized_region_growing/examples/Generalized_region_growing/data/: cube.xyz  inputsmall_2.xyz  points.xy  quadrilateral_and_circle.xy
Generalized_region_growing/include/CGAL/: Generalized_region_growing.h  Generalized_region_growing_points_conditions_2.h  Generalized_region_growing_points_connectivity_2.h  Generalized_region_growing_points_traits_2.h  Region_growing.h
Generalized_region_growing/package_info/Generalized_region_growing/: description.txt  maintainer
Generalized_region_growing/test/Generalized_region_growing/: CMakeLists.txt  Region_growing_with_mesh_big_test.cpp  Region_growing_with_mesh_cube.cpp  Region_growing_with_points_2.cpp  Region_growing_with_points_3.cpp  test_region_growing_with_mesh.cpp  test_region_growing_with_points_2.cpp  test_region_growing_with_points_3.cpp
Generalized_region_growing/test/Generalized_region_growing/data/: car_mesh.inp  cube.xyz  intersection.xyz
GraphicsView/demo/Alpha_shapes_2/: CMakeLists.txt
GraphicsView/src/CGAL_Qt5/: CMakeLists.txt
Hyperbolic_triangulation_2/demo/Hyperbolic_drawing/: Hyperbolic_Delaunay_triangulation_2_demo.cpp
Hyperbolic_triangulation_2/demo/Octagon_mesh_2/: CMakeLists.txt  Hyperbolic_Octagon_Mesh_2_demo.cpp  Hyperbolic_Octagon_Mesh_2_demo.moc
Installation/: CMakeLists.txt
Installation/cmake/modules/: CGAL_Macros.cmake  FindOpenGL.cmake
Installation/include/CGAL/: config.h  gl.h  glu.h
Level_of_detail/include/CGAL/: Level_of_detail_enum.h  Level_of_detail_traits.h
Number_types/include/CGAL/: FPU.h  Gmpq.h  Gmpz.h  Interval_nt.h  MP_Float.h  double.h  mpq_class.h  mpz_class.h
Periodic_2_triangulation_2/examples/Periodic_2_triangulation_2/: p2t2_alpha_shapes_2.cpp
Periodic_2_triangulation_2/include/CGAL/: Periodic_2_Delaunay_triangulation_2.h  Periodic_2_triangulation_2.h  Periodic_2_triangulation_filtered_traits_2.h  Periodic_2_triangulation_traits_2.h
Periodic_2_triangulation_2/test/Periodic_2_triangulation_2/: test_p2t2_triangulation_point_location.cpp
Polyhedron/demo/Polyhedron/: C2t3_type.h  CMakeLists.txt  Deform_mesh.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Polyhedron_demo_convex_hull_plugin.cpp  Polyhedron_demo_cut_plugin.cpp  Polyhedron_demo_mesh_3_plugin_cgal_code.cpp  Polyhedron_demo_point_inside_polyhedron_plugin.cpp  Polyhedron_demo_point_set_selection_plugin.cpp  Polyhedron_demo_remeshing_plugin_cgal_code.cpp  Polyhedron_demo_scale_space_reconstruction_plugin.cpp  Polyhedron_demo_selection_plugin.cpp  Polyhedron_demo_trivial_plugin.cpp  Scene.cpp  Scene.h  Scene_c2t3_item.h  Scene_combinatorial_map_item.cpp  Scene_combinatorial_map_item.h  Scene_draw_interface.h  Scene_edit_polyhedron_item.cpp  Scene_edit_polyhedron_item.h  Scene_implicit_function_item.cpp  Scene_implicit_function_item.h  Scene_item.cpp  Scene_item.h  Scene_item_with_display_list.cpp  Scene_nef_polyhedron_item.cpp  Scene_nef_polyhedron_item.h  Scene_nef_rendering.cpp  Scene_nef_rendering.h  Scene_plane_item.cpp  Scene_plane_item.h  Scene_points_with_normal_item.cpp  Scene_points_with_normal_item.h  Scene_polygon_soup_item.cpp  Scene_polygon_soup_item.h  Scene_polyhedron_item.cpp  Scene_polyhedron_item_k_ring_selection.h  (+10 more)
QP_solver/test/QP_solver/: master_mps_to_derivatives.cpp
STL_Extension/include/CGAL/: algorithm.h
Surface_mesh_approximation/demo/Surface_mesh_approximation/: CMakeLists.txt  ColorCheatSheet.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mesh_approximation_wrapper.h  Scene.cpp  Scene.h  VSAWrapper.h  VSA_approximation_wrapper.h  VSA_demo.cpp  dialSettings.cpp  dialSettings.ui
Surface_mesh_approximation/demo/Surface_mesh_approximation/cmake_modules/: FindQGLViewer.cmake
Surface_mesh_approximation/demo/Surface_mesh_approximation/data/: cube_meshed-sphere-union.off
Surface_mesh_approximation/demo/Surface_mesh_approximation/resources/: about.html
Surface_mesh_approximation/doc/Surface_mesh_approximation/: tofix.txt
Surface_mesh_approximation/examples/Surface_mesh_approximation/: CMakeLists.txt
Surface_mesh_approximation/include/CGAL/: L21_metric_plane_proxy.h  L2_metric_plane_proxy.h  Variational_shape_approximation.h
Triangulation_2/doc_tex/Triangulation_2/: triangulation_user.tex
Triangulation_2/include/CGAL/: Triangulation_2.h
(+206 files in other folders)
